Fix a typo in a file name, and remove the redundant file

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -16,7 +16,7 @@ set(TEST_SOURCE_FILES
         sb/orset.cc
         sb/map.hh
         sb/map.cc
-        test/timestamp_uinttest.cc
+        test/timestamp_unittest.cc
         test/lwwregister_uinttest.cc
         test/orset_uinttest.cc
 )
