Map tests are good so far!

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -19,6 +19,7 @@ set(TEST_SOURCE_FILES
         test/timestamp_unittest.cc
         test/lwwregister_uinttest.cc
         test/orset_uinttest.cc
+        test/map_uinttest.cc
 )
 
 find_library(GTEST_LIB NAMES libgtest.a PATHS /usr/local/lib)
