Move timestamp to core directory

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -8,8 +8,8 @@ set(GTEST_INCLUDE /usr/local/include)
 include_directories(${GTEST_INCLUDE})
 
 set(TEST_SOURCE_FILES
-        sb/timestamp.hh
-        sb/timestamp.cc
+        core/timestamp.hh
+        core/timestamp.cc
         sb/lwwregister.hh
         sb/lwwregister.cc
         sb/orset.hh
